fixed responsiveness for display of home page slider on mobile devices. slider now responds in optimum vertical positioning based on media viewer size.

--- a/tribeca-web/public/stylesheets/custom.css
+++ b/tribeca-web/public/stylesheets/custom.css
@@ -529,3 +529,7 @@ button.close {
 .table thead > tr > th {
     border-bottom: 0px solid #000;
 }
+
+.file-remove {
+    cursor: pointer;
+}
